Made styles more mobile-friendly. Fixed tag and category wrap.

--- a/themes/hello-4s3ti/assets/scss/_lessons-learned.scss
+++ b/themes/hello-4s3ti/assets/scss/_lessons-learned.scss
@@ -22,4 +22,14 @@
             padding-bottom: 1rem;
         }
     }
+    @media screen and (max-width: 684px) {
+        padding: 0.25rem 0.5rem 0.5rem 0.5rem;
+        ul {
+            margin-left: -0.25rem;
+            padding: 0.5rem;
+            li {
+                padding-bottom: 0.5rem;
+            }
+        }
+    }
 }
