--- a/themes/hello-4s3ti/assets/scss/_stickynav.scss
+++ b/themes/hello-4s3ti/assets/scss/_stickynav.scss
@@ -42,7 +42,7 @@ html, body {
     padding-left: 0.5rem;
     border-left: 3px solid;
     overflow-y: scroll;
-    height: 80vh;
+    max-height: 80vh;
     ul {
         list-style-type: none;
         margin: 0 1rem;
